User tokens now renew expiry stamp as they are checked/used.